--- a/to-do.html
+++ b/to-do.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="to-do.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Task List 2023</title>
+
+	<link rel="stylesheet" href="main.css" />
 </head>
-
 <body>
-    <h1>To Do List App</h1>
-    <h2> Use this app to create an ordered list! </h2>
-    <form id="todoForm">
-        <input id="todoInput" size="30">
-        <button type="button" class="button" onclick="todoList()">Save Item</button>
-    </form>
-    <ol id="todoList"></ol><br>
+	
+	<header>
+		<h1>Task List 2023</h1>
+		<form id="new-task-form">
+			<input 
+				type="text" 
+				name="new-task-input" 
+				id="new-task-input" 
+				placeholder="What do you have planned?" />
+			<input 
+				type="submit"
+				id="new-task-submit" 
+				value="Add task" />
+		</form>
+	</header>
+	<main>
+		<section class="task-list">
+			<h2>Tasks</h2>
 
-    <script src="to-do.js"></script>
+			<div id="tasks">
+
+				<!-- <div class="task">
+					<div class="content">
+						<input 
+							type="text" 
+							class="text" 
+							value="A new task"
+							readonly>
+					</div>
+					<div class="actions">
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</div>
+				</div> -->
+
+			</div>
+		</section>
+	</main>
+
+	<script src="main.js"></script>
 </body>
-
 </html>
